Dadana akcja edycji i wyświetlania danych klienta

--- a/application/_admin/view/zarzadzanieklientem/editMenu.phtml
+++ b/application/_admin/view/zarzadzanieklientem/editMenu.phtml
@@ -1,11 +1,11 @@
 <div class="objectMenu tableObjectMenu">
 	<div class="row">
 		<div class="icon"></div>
-		<div class="text"><a href="<?= $this->directoryUrl.'/clients/show/id/'.$this->customer['id']; ?>">Pokaż więcej informacji</a></div>
+		<div class="text"><a href="<?= $this->directoryUrl.'/zarzadzanieklientem/showcustomer/clientid/'.$this->customer['id']; ?>">Pokaż więcej informacji</a></div>
 	</div>
 	<div class="row">
 		<div class="icon"></div>
-		<div class="text"><a href="<?= $this->directoryUrl.'/transactions/list/customerId/'.$this->customer['id']; ?>">Edytuj dane osobowe</a></div>
+		<div class="text"><a href="<?= $this->directoryUrl.'/zarzadzanieklientem/editcustomer/clientid/'.$this->customer['id']; ?>">Edytuj dane osobowe</a></div>
 	</div>
 	<div class="row">
 		<div class="icon"></div>
@@ -13,6 +13,6 @@
 	</div>
 	<div class="row">
 		<div class="icon" style="margin-top: 2px"><img src="<?= $this->baseUrl.'/public/template/img/admin/remove-blog-hover-icon.png'; ?>"/></div> 
-		<div class="text"><a ajax="yes" ajax-link="<?= $this->directoryUrl.'/clients/delete/id/'.$this->customer['id']; ?>" ajax-options="remove:true,text:yes">Usuń</a></div>
+		<div class="text"><a href="<?= $this->directoryUrl.'/zarzadzanieklientem/delcustomer/clientid/'.$this->customer['id']; ?>">Usuń klienta</a></div>
 	</div>
 </div>
