Wyświetlanie i edycja danych klienta i samochodów

--- a/application/_admin/view/zarzadzanieklientem/editcustomer.phtml
+++ b/application/_admin/view/zarzadzanieklientem/editcustomer.phtml
@@ -36,6 +36,8 @@
 			<div class="row">
 				<label>Hasło <span class="small">Maks 25 znaków</span></label>
 				<input type="password" name="dane[haslo]" placeholder="hasło">
+                                <input type="submit" value="Zapisz">
+                                    
 			</div>
 		</div>
 	</form>
