Dodany model bazowy

--- a/application/_admin/view/zarzadzaniestanowiskami/newplace.phtml
+++ b/application/_admin/view/zarzadzaniestanowiskami/newplace.phtml
@@ -16,7 +16,7 @@
 			</div>
 			<div class="row">
 				<label>Posiada tunel </label>
-                                <input type="checkbox" name="dane[ptun]"> 
+                                <input type="checkbox" name="stat" value="y"> 
 			</div>
 			<div class="row">
 				<label>Przeznaczenie </label>
