Małe poprawki do widoków.

--- a/application/_admin/view/const/menu.phtml
+++ b/application/_admin/view/const/menu.phtml
@@ -10,7 +10,7 @@
 		</li>
 
 		<!-- MECHANICY -->
-		<li class="<?= $this->_controllerName=='mechanicy' ? 'active':''; ?>">
+		<li class="<?= $this->_controllerName=='zarzadzaniemechanikami' ? 'active':''; ?>">
 			<a><span class="title">Mechanicy</span></a>
 			<ul class="child">
 				<li><a href="<?= $this->directoryUrl.'/zarzadzaniemechanikami/newmechanic'; ?>">Nowy mechanik</a></li>
@@ -19,7 +19,7 @@
 		</li>
 
 		<!-- STANOWISKA -->
-		<li class="<?= $this->_controllerName=='stanowiska' ? 'active':''; ?>">
+		<li class="<?= $this->_controllerName=='zarzadzaniestanowiskami' ? 'active':''; ?>">
 			<a><span class="title">Stanowiska</span></a>
 			<ul class="child">
 				<li><a href="<?= $this->directoryUrl.'/zarzadzaniestanowiskami/newplace'; ?>">Nowe stanowisko</a></li>
