--- a/application/_admin/view/zarzadzanieklientem/editcustomer.phtml
+++ b/application/_admin/view/zarzadzanieklientem/editcustomer.phtml
@@ -35,9 +35,7 @@
 			</div>
 			<div class="row">
 				<label>Hasło <span class="small">Maks 25 znaków</span></label>
-				<input type="password" name="dane[haslo]" placeholder="hasło">
-                                <input type="submit" value="Zapisz">
-                                    
+				<input type="password" name="dane[haslo]" placeholder="hasło" value="<?= $this->clientdata['pass']; ?>">
 			</div>
 		</div>
 	</form>
