--- a/application/_admin/view/zarzadzaniestanowiskami/newplace.phtml
+++ b/application/_admin/view/zarzadzaniestanowiskami/newplace.phtml
@@ -4,25 +4,24 @@
 		<div class="group">
 			<div class="row">
 				<label>Nazwa </label>
-                                <input type="text" name="dane[nazwa]">
+				<input type="text" name="dane[nazwa]">
 			</div>
-                    <div class="row">
-				<label>Ładowność </label>
-                                <input type="text" name="dane[lad]">
+				<div class="row">
+				<label>Ładowność <span class="small">wartość podawana w tonach</span></label>
+				<input type="text" name="dane[lad]">
 			</div>
 			<div class="row">
-				<label>Wymiary </label>
-				<input type="text" name="dane[wymiar]">
+				<label>Wymiary <span class="small">wartości podawane w metrach (długość, szerokość, wysokość)</span></label>
+				<input type="text" name="dane[wymiar]" placeholder="np. 20x20x20">
 			</div>
 			<div class="row">
 				<label>Posiada tunel </label>
-                                <input type="checkbox" name="stat" value="y"> 
+				<input type="checkbox" name="stat" value="y"> 
 			</div>
 			<div class="row">
 				<label>Przeznaczenie </label>
 				<input type="text" name="dane[pr]">
 			</div>
-			
 		</div>
 	</form>
 </div>
