--- a/application/_admin/view/zarzadzanieklientem/editMenu.phtml
+++ b/application/_admin/view/zarzadzanieklientem/editMenu.phtml
@@ -13,6 +13,6 @@
 	</div>
 	<div class="row">
 		<div class="icon" style="margin-top: 2px"><img src="<?= $this->baseUrl.'/public/template/img/admin/remove-blog-hover-icon.png'; ?>"/></div> 
-		<div class="text"><a href="<?= $this->directoryUrl.'/zarzadzanieklientem/delcustomer/clientid/'.$this->customer['id']; ?>">Usuń klienta</a></div>
+		<div class="text"><a href="<?= $this->directoryUrl.'/zarzadzanieklientem/delcustomer/clientid/'.$this->customer['id'].'/type/noContent'; ?>">Usuń klienta</a></div>
 	</div>
 </div>
