--- a/application/_admin/view/zarzadzaniemechanikami/mechaniclist.phtml
+++ b/application/_admin/view/zarzadzaniemechanikami/mechaniclist.phtml
@@ -2,7 +2,7 @@
 <ul class="table productTable" model="Customers" loadState="1" paramsLink="<?= $this->_request->params; ?>" treeEdit="no">
 	<li class="naglowek">
 		<div class="col" style="width:60px">id</div>
-		<div class="col" style="width:255px">Nazwisko</div>
+		<div class="col" style="width:255px">Imię i nazwisko</div>
 		<div class="col" style="width:180px">PESEL</div>
 		<div class="col" style="width:195px">telefon</div>
 		<div class="col last" style="width:60px">opcje</div>
@@ -10,7 +10,7 @@
 	<?php foreach($this->mechanics as $this->mechanic): ?>
 		<li class="middle">
 			<div class="col" style="width: 60px;"><?= $this->mechanic['id']; ?></div>
-			<div class="col" style="width:255px;"><?= $this->mechanic['Nazw']; ?></div>
+			<div class="col" style="width:255px;"><?= $this->mechanic['Imie'].' '.$this->mechanic['Nazw']; ?></div>
 			<div class="col" style="width:180px; font-size: 14px;"><?= $this->mechanic['pesel']; ?></div>
 			<div class="col" style="width:195px; font-size: 14px;"><?= $this->mechanic['nr_tel']; ?></div>
 			<div class="col opCol" style="width: 60px"><div class="highlight" onclick="javascript:objectMenu.toggle($(this));"><?= $this->buttonListEdit; ?><?= $this->renderContent("zarzadzaniemechanikami/editMenu.phtml"); ?></div></div>
