--- a/application/_admin/view/zarzadzaniestanowiskami/editMenu.phtml
+++ b/application/_admin/view/zarzadzaniestanowiskami/editMenu.phtml
@@ -9,6 +9,6 @@
 	</div>
 	<div class="row">
 		<div class="icon" style="margin-top: 2px"><img src="<?= $this->baseUrl.'/public/template/img/admin/remove-blog-hover-icon.png'; ?>"/></div> 
-		<div class="text"><a href="<?= $this->directoryUrl.'/zarzadzaniestanowiskami/delplace/placeid/'.$this->place['id'].'/type/noContent/'; ?>">Usuń mechanika</a></div>
+		<div class="text"><a href="<?= $this->directoryUrl.'/zarzadzaniestanowiskami/delplace/placeid/'.$this->place['id'].'/type/noContent/'; ?>">Usuń stanowisko</a></div>
 	</div>
 </div>
