--- a/application/_admin/view/zarzadzaniestanowiskami/placelist.phtml
+++ b/application/_admin/view/zarzadzaniestanowiskami/placelist.phtml
@@ -2,17 +2,21 @@
 <ul class="table productTable" model="Customers" loadState="1" paramsLink="<?= $this->_request->params; ?>" treeEdit="no">
 	<li class="naglowek">
 		<div class="col" style="width:60px">id</div>
-		<div class="col" style="width:255px">Nazwa</div>
-		<div class="col" style="width:180px">Ładowność</div>
-		<div class="col" style="width:195px">Wymiary</div>
+		<div class="col" style="width:155px">Nazwa</div>
+		<div class="col" style="width:70px">Ładowność</div>
+		<div class="col" style="width:105px">Wymiary</div>
+		<div class="col" style="width:55px">Tunel</div>
+		<div class="col" style="width:235px">Przeznaczenie</div>
 		<div class="col last" style="width:60px">opcje</div>
 	</li>
 	<?php foreach($this->places as $this->place): ?>
 		<li class="middle">
 			<div class="col" style="width: 60px;"><?= $this->place['id']; ?></div>
-			<div class="col" style="width:255px;"><?= $this->place['Nazw']; ?></div>
-			<div class="col" style="width:180px; font-size: 14px;"><?= $this->place['ladow']; ?></div>
-			<div class="col" style="width:195px; font-size: 14px;"><?= $this->place['wymiary']; ?></div>
+			<div class="col" style="width:155px;"><?= $this->place['Nazw']; ?></div>
+			<div class="col" style="width:70px; font-size: 14px;"><?= $this->place['ladow']; ?></div>
+			<div class="col" style="width:105px; font-size: 14px;"><?= $this->place['wymiary']; ?></div>
+			<div class="col" style="width:55px; font-size: 14px;"><?= $this->place['Posiad_tun'] ? 'tak':'nie'; ?></div>
+			<div class="col" style="width:235px; font-size: 14px;"><?= $this->place['przezn']; ?></div>
 			<div class="col opCol" style="width: 60px"><div class="highlight" onclick="javascript:objectMenu.toggle($(this));"><?= $this->buttonListEdit; ?><?= $this->renderContent("zarzadzaniestanowiskami/editMenu.phtml"); ?></div></div>
 		</li>
 	<?php endforeach; ?>
