Kontroler obługi klienta

--- a/application/_admin/view/const/menu.phtml
+++ b/application/_admin/view/const/menu.phtml
@@ -31,8 +31,8 @@
 		<li class="<?= $this->_controllerName=='obsluga' ? 'active':''; ?>">
 			<a><span class="title">Obsługa klienta</span></a>
 			<ul class="child">
-				<li><a href="">Nowy pracownik</a></li>
-				<li><a href="">Przeglądaj pracowników</a></li>
+				<li><a href="<?= $this->directoryUrl.'/zarzadzanieobslugakli/newservice'; ?>">Nowy pracownik</a></li>
+				<li><a href="<?= $this->directoryUrl.'/zarzadzanieobslugakli/servicelist'; ?>">Przeglądaj pracowników</a></li>
 			</ul>
 		</li>
 	</ul>
