--- a/application/_admin/view/zarzadzaniemechanikami/editmechanic.phtml
+++ b/application/_admin/view/zarzadzaniemechanikami/editmechanic.phtml
@@ -1,6 +1,6 @@
 <div style="padding: 20px">
 	<form action="<?= $this->directoryUrl.'/zarzadzaniemechanikami/editmechanic/mechanicid/'.$this->mechanic['id'].'/type/noContent/'; ?>" method="POST" class="form saveBoxOn settingsForm">
-		<p class="h2">Nowy mechanik</p>
+		<p class="h2">Edytuj dane mechanika</p>
 		<div class="group">
 			<div class="row">
 				<label>Imię </label>
