Zaktualizowana baza danych, dodane metody zwracające ilość wolnych mechaników i stanowisk

--- a/application/_admin/view/zarzadzanieklientem/editcar.phtml
+++ b/application/_admin/view/zarzadzanieklientem/editcar.phtml
@@ -1,6 +1,6 @@
 <div style="padding: 20px">
 	<form action="<?= $this->directoryUrl.'/zarzadzanieklientem/editcar/carid/'.$this->car['id'].'/clientid/'.$this->clientid.'/type/noContent'; ?>" method="POST" class="form saveBoxOn settingsForm">
-		<p class="h2">Nowy samochód</p>
+		<p class="h2">Edytuj dane samochodu</p>
 		<div class="group">
 			<div class="row">
 				<label>Model </label>
