--- a/application/_admin/view/zarzadzanieklientem/editcustomer.phtml
+++ b/application/_admin/view/zarzadzanieklientem/editcustomer.phtml
@@ -1,6 +1,6 @@
 <div style="padding: 20px">
 	<form action="<?= $this->directoryUrl.'/zarzadzanieklientem/editcustomer/type/noContent/clientid/'.$this->clientdata['id']; ?>" method="POST" class="form saveBoxOn settingsForm">
-		<p class="h2">Nowy klient</p>
+		<p class="h2">Edytuj dane klienta</p>
 		<div class="group">
 			<div class="row">
 				<label>Nazwa / Imię i nazwisko <span class="small">nazwa firmy lub imię i nazwisko klienta</span></label>
