--- a/application/_admin/view/zarzadzaniezadaniami/index.phtml
+++ b/application/_admin/view/zarzadzaniezadaniami/index.phtml
@@ -1,13 +1,7 @@
 <?php
-foreach ($this->repair as $key=>$days){
-    echo $this->date[$key]."<br/>";
-    foreach ($days as $work){
-        echo 'ID Zadania:'.$work['ID_Zadania'].'<br/> Diagnoza:'.$work['Diagnoza'].'<br/>Satus:'.$work['Status'];
-    }
-    echo "<br/>";
+foreach ($this->date as $key=>$days){
+   echo $days.'<br/> Liczba wolnych mechaników:'.$this->mechanic[$key].'<br/> Liczba wolnych stanowisk:'.$this->places[$key].'<br/>';
 }
-/*foreach ($this->repair as $work){
-    echo $work;
-}*/
+
  ?>
  
