--- a/application/_admin/view/zarzadzaniezadaniami/index.phtml
+++ b/application/_admin/view/zarzadzaniezadaniami/index.phtml
@@ -1,7 +1,8 @@
 <?php
 foreach ($this->date as $key=>$days){
    echo $days.'<br/> Liczba wolnych mechaników:'.$this->mechanic[$key]
-           .'<br/> Liczba wolnych stanowisk:'.$this->places[$key].'<form action="'.$this->directoryUrl.'/zarzadzaniezadaniami/addrepair/date/'.$days.'" method="GET"> <input type ="submit" value="Dodaj naprawę"></form><br/>';
+           .'<br/> Liczba wolnych stanowisk:'.$this->places[$key]. '<br/><a href="'.$this->directoryUrl.'/zarzadzaniezadaniami/getdetails/date/'.$days.'">Szegóły </a> <br/><form action="'.$this->directoryUrl.'/zarzadzaniezadaniami/addrepair/date/'.$days.'" method="GET"> <input type ="submit" value="Dodaj naprawę"></form><br/>';
+           
 }
 
  ?>
